--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -13,6 +13,7 @@
                           <p class="card-text">{{i.last_name}}</p>
                           
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
